Ajout des flèches ainsi que des EventListener sur ces dernières

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img class="banner__img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
 		</div>
+		<button class="arrow arrow__left">
+			<img src="./assets/images/arrow_left.png" alt="Flèche vers la gauche">
+		</button>
+		<button class="arrow arrow__right">
+			<img src="./assets/images/arrow_right.png" alt="Flèche vers la droite">
+		</button>
 	</div>
 	<section id="about-us" class="container">
 		<div>
