--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 		<img class="banner__img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
+			<div class="dot dot__selected"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
 		</div>
 		<button class="arrow arrow__left">
 			<img src="./assets/images/arrow_left.png" alt="Flèche vers la gauche">
