--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <main>
 	<div id="banner">
 		<img class="banner__img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<div class="tagLine">
+			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		</div>
 		<div class="dots">
 			<div class="dot dot__selected"></div>
 			<div class="dot"></div>
